@@ -35,12 +35,17 @@ case "$1" in
     ;;
 esac
 
-# No DEBHELPER scripts, we do not want automatic startup after installation.
-exit 0
+# We do not use pyc-files anyway, so disable generation.
+alias pycompile=/bin/true
 
 # dh_installdeb will replace this with shell code automatically
 # generated by other debhelper scripts.
 
 #DEBHELPER#
 
+# Start the service only when it was already enabled before updating.
+if deb-systemd-helper debian-installed aminer.service && [ -d /run/systemd/system ]; then
+	systemctl --system daemon-reload >/dev/null || true
+	deb-systemd-invoke start aminer.service >/dev/null || true
+fi
 exit 0
