@@ -16,3 +16,10 @@ override_dh_auto_build:
 	http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl \
 	debian/AMiner.1.xml debian/AMinerRemoteControl.1.xml
 	dh_auto_build
+
+# Modify startup behaviour in auto-generated code in postinst:
+# Do not attempt to add aminer.service to autostart if user does
+# not want to have it running explicitely. See "Running as a Service"
+# from /usr/share/doc/aminer/Readme.txt.gz for more information.
+override_dh_systemd_enable:
+	dh_systemd_enable --no-enable
